feat: dato no aplica para todos los campos a los que no se le guarda información
